--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,7 +26,7 @@
     <title>
       Real E State
     </title>
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <!-- <script src="https://accounts.google.com/gsi/client" async defer></script> -->
   </head>
   <body>
     <div id="root"></div>
